--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,12 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Nunito+Sans:ital,wght@0,400;0,600;1,800&family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-
     <title>Order Food</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="backdrop"></div>
+    <div id="modal-overlay"></div>
   </body>
 </html>
